--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/2b171deca0.js" crossorigin="anonymous"></script>
+   <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 
   <title>Now you see me</title>
   <title>Document</title>
@@ -26,14 +27,15 @@
   			</header>
 
   			<div class="subheader">
+          <i class="fa-solid fa-arrow-rotate-right" onClick="window.location.reload();"></i>
   				<div id="hi">
-  					<p id="hashtag">#COVID-19 </p>
+  					<p id="hashtag">#largestNumberofGraduatesEVER </p>
   				</div>
   				<!-- <img src="https://i.ibb.co/PxGygfW/delivery.png" alt="" /> -->
   			</div>
 
   			<div class="grid container" id = "grid">
-          <div id="top">by hot</div>
+          <div id="top">by time</div>
           <div id="list">
   				<div class="item">
             <img class= "port" src="https://www.nicepng.com/png/detail/202-2024580_png-file-profile-icon-vector-png.png" alt="" />
@@ -46,7 +48,7 @@
               <div class="info">
                 <p class="time">1st floor 3-21 12:30pm</p>
                 <div class="icon">
-                  <i class="fa fa-regular fa-thumbs-up" ></i>
+                  <i class="fa fa-regular fa-thumbs-up"></i>
                   <i class="fa fa-regular fa-message"></i>
                 </div>
               </div>
@@ -64,7 +66,7 @@
         <button id="comS">Submit</button>
       </div>
   		<footer class="app-footer">
-  			<ul>
+  			<!--<ul>
   				<li>
   				<i class="fa-solid fa-magnifying-glass"></i>
   					Discover
@@ -74,6 +76,7 @@
   					Messages
   				</li>
   			</ul>
+        -->
   		</footer>
       <script type="text/javascript">
         document.getElementById("test").onclick = function () {
