--- a/index.html
+++ b/index.html
@@ -35,7 +35,13 @@
   			</div>
 
   			<div class="grid container" id = "grid">
-          <div id="top">by time</div>
+          <div class="dropdown">
+            <button onclick="myFunction()" class="dropbtn">Sort by</button>
+            <div id="myDropdown" class="dropdown-content">
+                <a href="#" id="order">In order</a>
+                <a href="#" id="reverse">In reverse order</a>
+            </div>
+          </div>
           <div id="list">
   				<div class="item">
             <img class= "port" src="https://www.nicepng.com/png/detail/202-2024580_png-file-profile-icon-vector-png.png" alt="" />
