--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
   <script src="https://kit.fontawesome.com/2b171deca0.js" crossorigin="anonymous"></script>
    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 
-  <title>Now you see me</title>
-  <title>Document</title>
+  <title>See and be Seen</title>
 </head>
 <body>
   <!-- <div id="splash">
